--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	//implementation 'org.liquibase:liquibase-core'
 	implementation 'com.h2database:h2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.3'
+	implementation 'org.apache.httpcomponents:httpclient'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
