--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	testImplementation {
+		extendsFrom compileOnly
+	}
 }
 
 repositories {
