updated2 getUsers with test coverage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
         persistence:
           validation:
             mode: none
+  data:
+    web:
+      pageable:
+        max-page-size: 100
